--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.Login">
+        <activity android:name=".login.Login" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".menu.Menu" />
-        <activity android:name=".login.RegisterActivity" />
+        <activity android:name=".menu.Menu" android:screenOrientation="portrait"/>
+        <activity android:name=".login.RegisterActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
